--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "angular": "~1.4.9",
         "angular-animate": "~1.4.9",
-        "angular-recursion": "~1.0.5"
+        "angular-recursion": "~1.0.5",
+        "angular-uuid4": "0.3.1"
     }
 }
