Fixed invalid bower warnings: main should not contain/reference minimized files. Add uuid4 depedency to the NPM repository.

--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
         "demo"
     ],
     "main": [        
-        "dist/angular-tree-widget.min.js",
-        "dist/angular-tree-widget.min.css"
+        "dist/angular-tree-widget.js",
+        "dist/angular-tree-widget.css"
     ],
     "dependencies": {
         "angular": "~1.4.9",
